# miniredis_mine

./: Cargo.toml  index.html
backend/: Cargo.toml
backend/src/: execute_data.rs  main.rs
front/: Cargo.toml
front/src/: app.rs  main.rs  terminal.rs
src/: app.rs  client.rs  custom_error.rs  execute_data.rs  get.rs  input_handle.rs  lib.rs  main.rs  set.rs  stream.rs
