[package]
name = "cli_for_miniredis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.9"
axum={version="0.8.6",features=["macros"]}
tokio-util = {version="0.7.17",features=["rt"]}
hyper = "1.7.0"
hyper-util = { version="0.1.17", features =["server","tokio"] }