[package]
name = "front"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0",features = ["csr"] }
yew-router = "0.18.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["WebSocket"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
js-sys = "0.3.72"